--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.wishlist-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
